observability/Jaeger/HTTProute-jaeger.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jaeger-route-https
  namespace: observability
spec:
  hostnames:
   - "jaeger.quanldl.click"
  parentRefs:
  - group: gateway.networking.k8s.io
    namespace: default
    kind: Gateway
    name: app-alb-gateway
    sectionName: https
  rules:
  - matches:
        - path:
            type: PathPrefix
            value: /

    backendRefs:
        - name: jaeger
          port: 16686
